--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "expo export --platform web --output-dir dist",
     "build:preview": "expo export --platform web --output-dir dist",
     "test": "jest --watchAll",
-    "preview": "eas build --profile=preview --platform=ios"
+    "preview": "eas build --profile=preview --platform=ios",
+    "codegen": "graphql-codegen"
   },
   "jest": {
     "preset": "jest-expo"
@@ -34,6 +35,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.6",
     "@shopify/flash-list": "^2.0.3",
+    "@types/lodash": "^4.17.20",
     "axios": "^1.12.2",
     "babel-plugin-module-resolver": "^5.0.2",
     "dom-helpers": "^5.2.1",
@@ -50,6 +52,7 @@
     "expo-web-browser": "~15.0.7",
     "graphql": "^16.11.0",
     "graphql-ws": "^6.0.6",
+    "lodash": "^4.17.21",
     "lucide-react-native": "^0.510.0",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
@@ -71,6 +74,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@graphql-codegen/cli": "^5.0.5",
+    "@graphql-codegen/client-preset": "^4.7.0",
+    "@graphql-codegen/typescript": "^4.1.5",
+    "@graphql-codegen/typescript-operations": "^4.5.1",
+    "@graphql-codegen/typescript-react-apollo": "^4.3.2",
     "@types/react": "~19.1.10",
     "jest": "^29.2.1",
     "jest-expo": "~54.0.11",
