--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "dom-helpers": "^5.2.1",
     "expo": "^54.0.7",
     "expo-auth-session": "^7.0.8",
+    "expo-blur": "^15.0.7",
     "expo-font": "~14.0.8",
     "expo-haptics": "^15.0.7",
     "expo-image-picker": "^17.0.8",
